-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
lnd_timeout is calculated using the following formula:
lnd_timeout = (lnet_transaction_timeout - 1) / (retry_count + 1)
currently lnet_transaction_timeout is allowed to be as low as 1 which makes derived 0 lnd_transaction timeout value possible, for example:
# lnetctl set transaction_timeout 1 # lnetctl global show global: numa_range: 0 max_interfaces: 200 discovery: 1 drop_asym_route: 0 retry_count: 0 transaction_timeout: 1 health_sensitivity: 100 recovery_interval: 1 router_sensitivity: 100 lnd_timeout: 0 response_tracking: 3 recovery_limit: 0 max_recovery_ping_interval: 900
There probably should be reasonable minimal positive thresholds defined for both lnd_timeout and lnet_transaction_timeout.