LU-16260 lnet: enforce a positive minimum for lnd_timeout

Set the lnet_lnd_timeout to at least 1 second. The lnd_timeout is
calculated using the following formula:
max((lnet_transaction_timeout - 1) / (lnet_retry_count + 1), 1U);

Signed-off-by: Frank Sehr <fsehr@whamcloud.com>
Change-Id: I64fd133974bd1f60ff3d7354bf9e0990c56d4c04
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/50236
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Chris Horn <chris.horn@hpe.com>
Reviewed-by: Serguei Smirnov <ssmirnov@whamcloud.com>
Reviewed-by: Cyril Bordage <cbordage@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>